flowcontroller/yamls/networkpolicy-allow-emitter-to-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-emitter-to-redis
  annotations:
    flowDef:
      priority: 1
spec:
  policyTypes:
  - Ingress
  podSelector: 
    matchLabels:
      app: redis
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: processor
      namespaceSelector:
        matchLabels:
          name: ((/spec/namespace))
    ports:
    - protocol: TCP
      port: 6379
